# TradingAgents_Stellar_Hackaton

./: .env.example  .gitignore  CRYPTO_FUNDAMENTALS_PLAN.md  INTEGRATION_FLOW_DIAGRAMS.md  INTEGRATION_PLAN_KRONOS.md  LEARNING_PLAN.md  READING_GUIDE.md  README.md  limitaion.md  pyproject.toml  pyrightconfig.json
.github/workflows/: test.yml
.kiro/agents/: understand.json  understand.md
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
api_cache/BINA.JK/: fundamentals.json  ohlcv.csv
api_cache/DEWA.JK/: fundamentals.json  ohlcv.csv
backtest_results/BREN.JK/: config.json  decision_log.jsonl  equity_curve.csv  leakage_audit.json  margin_events.csv  margin_log.csv  position_log.csv  report.md  summary.json  trade_log.csv  trigger_log.jsonl
cli/: main.py  models.py  stats_handler.py  utils.py
configs/: active_coins.json  llm_providers.json
news_aggregator/: __init__.py  aggregator.py  config.json  rss_monitor.py  seen_articles.json
notebooks/: Train_Crypto_News_Classifier.ipynb  Train_Multi_Model_Comparison.ipynb
reports/BUMI.JK_20260523_210715/: complete_report.md
reports/BUMI.JK_20260523_222601/: complete_report.md
reports/CDIA.JK_20260701_170328/: complete_report.md
reports/TSM_20260523_214918/: complete_report.md
scripts/: collect_training_data.py  fetch_alternative_data.py  label_collected.py  run_aggregator.py  train_colab.py  train_model.py
tests/: conftest.py  test_bluesmind_provider.py  test_checkpoint_bluesmind.py  test_crypto_asset_mode.py  test_crypto_fundamentals.py  test_e2e_bluesmind.py  test_e2e_smoke.py  test_fundamentals_web_search.py  test_history_agent.py  test_market_crypto_data.py  test_memory_log.py  test_narrative_agent.py  test_news_classifier.py  test_ollama_base_url.py  test_sentiment_sources.py  test_structured_agents.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py  history_agent.py  (+1 more)
(+465 files in other folders)
